fix bug 163225 [success or failure of ExtractScheme is not enough to decide if a url is absolute or relative] This is second part of the stuff to support those deprecated relative urls of type http:file or http:/path. By loosening the check on absolute uris in nsIOService::NewURI nsStandardURL::Resolve gets a chance to do its job. r=bbaetz, sr=darin